# control-craft

./: LICENSE  README.md  pyproject.toml
backend/: .env.example  context.txt  main.py  norms.txt  pyproject.toml
backend/docs/: generator_profile.md
backend/src/: cloudant.py
backend/src/controllers/: audit_controller.py
backend/src/routers/: audit_router.py
backend/src/services/: agent.py
backend/tests/: bpmn_1.bpmn  bpmn_1_fixed.bpmn
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts
frontend/app/lib/: agentClient.ts
frontend/app/routes/: home.tsx
